--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -30,4 +30,9 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Update models
       run: |
-        python update-models.py
+        python fetch-models.py
+    - name: Commit change
+      run: |
+        - uses: EndBug/add-and-commit@v7
+        with:
+          default_author: github_actions
